--- a/src/main/scss/components/integration/view-tree/node-info.scss
+++ b/src/main/scss/components/integration/view-tree/node-info.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .studio-view-tree-node-info
 {
 	&.asa-expanded
@@ -27,16 +29,16 @@
 .studio-view-tree-node-details
 {
 	display: none;
+	@include user-select(auto);
 	border-radius: 4px;
 	border: solid 2px $studio-view-tree-line-color;
 	margin-bottom: $studio-view-tree-node-vgutter;
-	min-width: 200px;
-	padding:$as-gutter;
+	min-width: 400px;
 	&.asa-selected,
 	{
 		box-shadow: $as-whiteframe-shadow-2dp;
 		border-color: $studio-view-tree-line-color-hover;
-		background-color: #ff;
+		background-color: #fff;
 		font-weight: bold;
 	}
 }
