field labels + view editor

--- a/src/main/scss/components/card/_as-card.scss
+++ b/src/main/scss/components/card/_as-card.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	margin: $as-baseline-grid;
 	box-shadow: $as-card-box-shadow;
-
+	background-color: #fff;
 	.as-card-header
 	{
 		padding: $as-card-padding;
