--- a/src/main/scss/components/integration/view-tree/node-info.scss
+++ b/src/main/scss/components/integration/view-tree/node-info.scss
@@ -30,14 +30,22 @@
 {
 	display: none;
 	@include user-select(auto);
-	border-radius: 4px;
-	border: solid 2px $studio-view-tree-line-color;
+	margin: -$as-gutter;
 	margin-bottom: $studio-view-tree-node-vgutter;
 	min-width: 400px;
-	&.asa-selected
+	z-index: 1000;
+	.studio-view-tree-node-details-bg
 	{
-		box-shadow: $as-whiteframe-shadow-2dp;
-		border-color: $studio-view-tree-line-color-hover;
+		position: fixed;
+		left: 0px;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+	}
+	.as-card
+	{
+		z-index: 2001;
 		background-color: #fff;
+		box-shadow: $as-whiteframe-shadow-10dp;
 	}
 }
