--- a/src/main/scss/components/card/_as-card.scss
+++ b/src/main/scss/components/card/_as-card.scss
@@ -166,7 +166,10 @@
     &:not(.layout-column) .as-button {
       &:not(.as-icon-button) {
         margin: 0 $as-baseline-grid * .5;
-
+		&.asa-right
+		{
+			float: right;
+		}
         &:first-of-type {
           margin-left: 0;
         }
