--- a/src/main/scss/components/_all-responsive.scss
+++ b/src/main/scss/components/_all-responsive.scss
@@ -26,6 +26,7 @@
 @import "file-upload/all";
 
 @import "form/all";
+@import "expansion-panel/all";
 
 @import "navigation/all";
 @import "progress/all";
@@ -38,5 +39,3 @@
 @import "typography/all";
 @import "integration/all";
 @import "workflow/all";
-
-
