--- a/src/main/scss/components/_all-responsive.scss
+++ b/src/main/scss/components/_all-responsive.scss
@@ -21,6 +21,7 @@
 @import "button/all";
 @import "complex-editor/all";
 @import "menu/all";
+@import "steppers/all";
 
 @import "crud/all";
 @import "list/all";
