--- a/src/main/scss/components/integration/structure-fields/_all.scss
+++ b/src/main/scss/components/integration/structure-fields/_all.scss
@@ -5,10 +5,15 @@
 @import "node-info";
 @import "box";
 
+.studio-structure-fields-editor
+{
+	
+}
 .studio-structure-fields-shortcuts
 {
 	color: map-get($as-palette-grey, 800);
 	padding: $as-gutter *2;
+	padding-top: 0px;
 	font-size: 16px;
 	
 	@include transition(all 10s ease);
