--- a/src/main/scss/components/layout/_all.scss
+++ b/src/main/scss/components/layout/_all.scss
@@ -6,3 +6,12 @@
 @import "as-universal-search";
 @import "as-status-label";
 @import "as-coltab";
+
+.as-float-left
+{
+	float: left;
+}
+.as-float-right
+{
+	float: left;
+}
