--- a/src/main/scss/components/integration/view-tree/_all.scss
+++ b/src/main/scss/components/integration/view-tree/_all.scss
@@ -40,7 +40,7 @@
 		width: 24px;
 		text-align: center;
 		cursor: default;
-		background-color: #fff;
+		background-color: #f8f8f8;
 		@include user-select(none);
 
 		.asc-minus
