--- a/src/main/scss/components/form/_as-form.scss
+++ b/src/main/scss/components/form/_as-form.scss
@@ -19,3 +19,12 @@
 		display:none;
 	}
 }
+.as-form-top-help
+{
+	padding: 16px;
+    font-size: 14px;
+    border-bottom: solid 1px #999;
+    margin: -16px;
+    padding-top: 32px;
+    background-color: #ffe;
+}
