--- a/src/main/scss/components/bars/app-bar/_as-appbar-apptitle.scss
+++ b/src/main/scss/components/bars/app-bar/_as-appbar-apptitle.scss
@@ -8,6 +8,10 @@
 {
 	z-index: $as-z-index-menu-parent;
 }
+.as-apptitle-breadcrumbs
+{
+	margin-left: $as-apptitle-breadcrumbs-margin-left; 
+}
 .as-apptitle-breadcrumb
 {
 	@include user-select(none);
