--- a/src/main/scss/components/$common/layout/_as-responsive.scss
+++ b/src/main/scss/components/$common/layout/_as-responsive.scss
@@ -23,5 +23,6 @@
 	.asd-wide { display:block; }
 }
 .asd-mobile { display:none; }
+.asd-mobile { display:none; }
 .asd-tablet { display:none; }
 .asd-desktop { display:none; }
